kubernetes/apps/media/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - radarr.local.elmurphy.com
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
